force-app/main/default/objects/Internal_Contract_Contact_Role__c/Internal_Contract_Contact_Role__c.object-meta.xml
<CustomObject>
    <description>Junction object between the Contract Agreement and Employee Details which will store the internal contact roles.</description>
    <label>Point Of Contact - Internal</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Internal Contract Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Point Of Contact - Internal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>