force-app/main/default/objects/Internal_Contract_Contact_Role__c/fields/Contract_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement__c</fullName>
    <label>Contract Agreement</label>
    <referenceTo>Contract_Agreement__c</referenceTo>
    <relationshipName>Internal_Contract_Contact_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>