force-app/main/default/objects/Internal_Contract_Contact_Role__c/fields/Employee_Detail__c.field-meta.xml
<CustomField>
    <fullName>Employee_Detail__c</fullName>
    <label>Employee Detail</label>
    <referenceTo>Employee_Detail__c</referenceTo>
    <relationshipName>Internal_Contract_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>