force-app/main/default/objects/Internal_Contract_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_of_Contact</valueSetName>
    </valueSet>
</CustomField>